# BIF-Core-SDK-C

./: CMakeLists.txt  README.md
3rd/: Makefile
3rd/curl-master/.github/: CODEOWNERS
3rd/curl-master/.github/workflows/: appveyor-status.yml
3rd/curl-master/lib/: altsvc.c
3rd/ed25519-donna/: CMakeLists.txt  Makefile.am  curve25519-donna-sse2.h
common/: general.c
doc/: SDK_design_for_C.md
example/: CMakeLists.txt  account_create_service_example.c  account_get_service_example.c  account_set_metadata_example.c  account_set_privilege_example.c  block_get_service_example.c  contract_batch_invoke_example.c  contract_create_example.c  contract_get_example.c  contract_invoke_example.c  contract_query_example.c  crypto_manager.c  evaluate_batch_example.c  evaluate_fee.c  key_store_example.c  mnemonic_example.c  transaction_batch_gas_send_example.c  transaction_bif_submit_example.c  transaction_gas_send_example.c  transaction_get_example.c
exception/: sdk_error.c
include/: account_service.h  block_service.h  constant.h  contract_service.h  crypto.h  ecc_sm2.h  fmacros.h  general.h  http.h  key_pair_entity.h  key_store.h  private_key_manager.h  public_key_manager.h  random.h  sdk_error.h  transaction_service.h  util.h
include/mnemonic/: bip32.h  bip39_english.h  ecdsa.h  hasher.h  hmac.h  mnemonic.h  sha2.h  sha3.h
include/request/: account_request.h  block_request.h  contract_request.h  operation_request.h  transaction_request.h
include/response/: account_response.h  base.h  block_response.h  contract_response.h  transaction_response.h
module/account/: account_service.c
module/blockchain/: block_service.c
module/contract/: contract_service.c
module/encryption/: base58.c  bignum.c  bip32.c  blake256.c  blake2b.c  curves.c  ecc_sm2.c  ecdsa.c  groestl.c  hasher.c  hmac.c  key_pair_entity.c  key_store.c  mnemonic.c  nist256p1.c  pbkdf2.c  private_key_manager.c  public_key_manager.c  rfc6979.c  ripemd160.c  secp256k1.c  sha3.c
module/transaction/: transaction_service.c
utils/: crypto.c  http.c  random.c  sha2.c  util.c
